# GBA-Texture-Editor

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/include/: Application.h
Editor/include/ImGuiWindows/: BaseImGuiWindow.h
Editor/include/Input/: Input.h  KeyCodes.h  MouseButtonCodes.h
Editor/src/: Application.cpp  Main.cpp
Editor/src/ImGuiWindows/: BaseImGuiWindow.cpp
Editor/src/Input/: Input.cpp
Engine/: CMakeLists.txt
Engine/include/: Log.h
Engine/include/Utils/: FileUtils.h
Engine/src/: Log.cpp
Engine/src/OpenGL/: GLFramebuffer.cpp  GLTexture.cpp
Engine/src/Utils/: FileUtils.cpp
ImGui/: CMakeLists.txt
